common/common.scss
/* ... */
.topic-actions {
  display: block;

  .like-count:empty {
    margin-right: 0;
  }
}

.more-topics__container
  .more-topics__list
  .topic-list-body
  .topic-list-item:first-child
  td {
  padding-top: 0.8em;
}

// tiles specific styling
.contents.has-more > .topic-list.tiles-style tbody {
  margin-top: 60px;
}

#list-area {
  container-type: inline-size;
  container-name: list-area;
}

.tiles-style {
  th {
    display: none;
  }

  .topic-statuses svg.d-icon-bookmark {
    display: none;
  }

  tbody {
    .topic-list-item-separator {
      display: none;
    }
    display: grid;
    gap: 4px;
    grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
    grid-auto-rows: 4px;
    border-top: none;
  }

  .topic-list-item,
  tr {
    border: none;
  }

  .topic-list-data:first-of-type {
    padding-left: 0;
  }

  .tiles-grid-item-width2 {
    box-sizing: border-box;
    cursor: pointer;
    border-radius: 3px;
    grid-column-end: span 2;
  }

  .topic-list-item {
    box-sizing: border-box;
    cursor: pointer;
    border-radius: 3px;
    grid-row-end: span 44;
    display: flex;
    flex-direction: column;

    &.no-background-colour {
      border: 1px solid var(--primary-low);
    }

    .main-link {
      padding-left: 0.67em;
    }

    &.visited .topic-list-data {
      background-color: unset;
    }
  }

  .topic-thumbnail {
    grid-area: photo;
    display: block;
    padding: 0;

    // z-index: -1;
    width: 100%;

    img {
      width: 100%;
      height: auto;
    }
  }

  // TODO add this back when mask functionality is added
  // .image-mask {
  //   position: relative;
  //   margin-bottom: -200px;
  //   height: 100%;
  //   width: 100%;
  //   z-index: 1;
  // }
  .thumbnail {
    .no-thumbnail {
      display: none;
    }
  }

  .topic-list-item.selected .topic-details {
    box-shadow: inset 5px 0 0 var(--d-nav-color--active);
  }

  .show-more.has-topics {
    position: relative;
  }

  .main-link {
    grid-area: title;
  }

  .topic-title {
    font-size: 1.143em;
    padding: 0 0 0 0;

    .link-top-line {
      flex: 1 1 auto;
    }

    a.title {
      color: var(--primary);
    }

    a.topic-featured-link {
      padding-left: 0;
      padding-top: 3px;
    }

    .badge-notification.new-topic {
      vertical-align: top;
      display: inline-block;
    }
  }

  .topic-list-item.visited a.title {
    color: var(--primary-medium);
  }

  .topic-statuses {
    float: right;
  }

  .topic-excerpt {
    padding-right: 0.67em;
    padding-left: 0.67em;
    overflow-wrap: break-word;
    -ms-word-break: break-all;
    word-break: break-all;
    word-break: break-word;
    hyphens: auto;
  }

  .topic-footer {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding-top: 10px;
    padding-left: 0.67em;
    padding-right: 0.67em;
  }

  .topic-meta {
    flex: 1;
    vertical-align: middle;
    display: flex;

    .container {
      align-self: center;

      a {
        display: inline-block;
      }

      .top-line {
        display: inline;

        .topic-views {
          color: var(--primary-medium);
        }

        .topic-replies {
          padding-left: 3px;
        }
      }

      .bottom-line {
        align-self: start;

        .middot {
          display: none;
        }

        .topic-timing {
          vertical-align: top;
        }
      }
    }
  }

  .topic-poster-names a {
    font-size: 0.9em;
  }

  .topic-users {
    grid-area: posters;
    display: flex;
    flex: 1;
    vertical-align: middle;

    .inline {
      align-self: center;
      text-align: right;
      color: var(--primary-med-or-secondary-med);

      .avatar {
        padding: 0 0 0 0;
        margin-right: -2px;
        width: 22px;
        height: 22px;
      }
    }
  }

  .topic-actions {
    flex: 1;
    display: flex;
    justify-content: flex-end;

    .inline {
      align-self: center;
      text-align: right;
    }
  }

  .middot::after {
    content: "\00B7";
  }

  div.sub,
  span.sub {
    padding: 0;
    font-size: 12px;
  }

  .topic-list {
    padding-top: 10px;
  }

  .list-tags {
    padding-right: 10px;
  }

  a.topic-featured-link {
    display: inline-block;
    padding-left: 0;
    padding-top: 3px;
  }

  &.side-by-side {
    @container list-area (width > 900px) {
      tbody {
        grid-template-columns: auto;
        grid-auto-rows: auto;

        .topic-list-item {
          flex-direction: row;
          box-sizing: border-box;
          cursor: pointer;
          border-radius: 3px;
          grid-row-end: span 1;
          min-height: 190px;
        }

        .topic-details {
          flex: 2;
          display: flex;
          flex-direction: column;
          justify-content: space-between;

          .topic-users {
            justify-content: center;
          }

          .topic-meta {
            display: flex;

            .container {
              display: flex;
              flex-direction: row;

              .bottom-line {
                padding-left: 3px;
                padding-top: 1px;
                align-self: center;
                display: inline;

                .middot {
                  display: inline-block;
                }

                .topic-timing {
                  vertical-align: middle;
                }
              }
            }
          }
        }

        .topic-thumbnail {
          flex: 1;
          width: 100%;
          overflow: hidden;
          margin: 0;

          // padding-top: 56.25%;
          position: relative;
          z-index: 100;

          img {
            position: absolute;
            top: 50%;
            left: 50%;
            width: 100%;
            transform: translate(-50%, -50%);
          }
        }

        .topic-footer {
          margin-bottom: 10px;
        }
      }
    }
  }
}

img.thumbnail {
  object-fit: cover;
}

.topic-details .topic-excerpt {
  display: block;
}
/* ... */

